--- a/source/0.4/src/main/webapp/provider-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-meds.xhtml
@@ -116,11 +116,12 @@
         </h:column>
 				<h:column>
 					<button onclick="document.getElementById('modalDelMed').style.display='block'" class="w3-button w3-red w3-round-xxlarge">DELETE</button>
-					<div id="modalDelMed" class="w3-modal">
+					<div id="modalDelMed" class="w3-modal"><div class="w3-modal-content w3-container w3-card w3-animate-zoom">
 						<span onclick="document.getElementById('modalDelMed').style.display='none'" class="w3-button w3-red w3-display-topright">X</span>
+						<h3>Are you sure you want to remove #{med.name} from #{med.patient} ?</h3>
 						<h:commandButton value="YES" action="#{beanDButil.delMedication(med.name,med.patient,med.provider)}" class="w3-button w3-red w3-round-xlarge"></h:commandButton>
 						<button onclick="document.getElementById('modalDelMed').style.display='none'" class="w3-button w3-blue w3-round-xxlarge">NO</button>
-					</div>
+					</div></div>
         </h:column>
       </h:dataTable>
 			</div>
