--- a/source/0.4/src/main/webapp/provider-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-meds.xhtml
@@ -81,7 +81,48 @@
       </div>
 
     </div>
-    
+    <div id="profileInfo" class="w3-container w3-mobile w3-car">
+			<h:dataTable value="#{beanProvider}" var="p" class="w3-table w3-responsive">
+				<h:column>
+					<f:facet name="header">First</f:facet>
+					#{beanProvider.firstName}
+				</h:column>
+				<h:column>
+					<f:facet name="header">MI</f:facet>#{beanProvider.middleInitial}
+				</h:column>
+				<h:column>
+					<f:facet name="header">Last</f:facet>#{beanProvider.lastName}
+				</h:column>
+				<h:column>
+					<f:facet name="header">Sex</f:facet>#{beanProvider.sex}
+				</h:column>
+				<h:column>
+					<f:facet name="header">Phone</f:facet>#{beanProvider.phone}
+				</h:column>
+				<h:column>
+					<f:facet name="header">Address</f:facet>#{beanProvider.address}
+				</h:column>
+				<h:column>
+					<f:facet name="header">Email</f:facet>#{beanProvider.email}
+				</h:column>
+				<h:column>
+					<f:facet name="header">Username</f:facet>#{beanProvider.username}
+				</h:column>
+				<h:column>
+					<f:facet name="header">Token</f:facet>#{beanProvider.token}
+				</h:column>
+				<h:column>
+					<f:facet name="header">Update</f:facet>
+					<button onclick="document.getElementById('modalUpdateProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">UPDATE</button>
+					<div id="modalUpdateProfile" class="w3-modal"><div class="w3-modal-content w3-container w3-card w3-animate-zoom">
+						<span onclick="document.getElementById('modalUpdateProfile').style.display='none'" class="w3-button w3-red w3-display-topright">X</span>
+						<h3>Update Profile</h3>
+						<h:commandButton value="SUBMIT" action="#" class="w3-button w3-red w3-round-xlarge"></h:commandButton>
+						<button onclick="document.getElementById('modalUpdateProfile').style.display='none'" class="w3-button w3-red w3-round-xxlarge">CLOSE</button>
+					</div></div>
+				</h:column>
+			</h:dataTable>
+		</div>
     <div id="middle" class="w3-container w3-mobile w3-card">
 			
 			<div class="w3-container w3-card">
