--- a/source/0.4/src/main/webapp/provider-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-meds.xhtml
@@ -20,57 +20,7 @@
     
       <div class="w3-container w3-mobile w3-row w3-padding">
         <div class="w3-container w3-center w3-col s4 m4 l4">
-          <button onclick="document.getElementById('modalProviderProfile').style.display='block'" class="w3-button w3-green w3-round-xxlarge">
-          	#{beanProvider.username}
-					</button>
-          <div id="modalProviderProfile" class="w3-modal">
-            <div class="w3-modal-content w3-container w3-card w3-animate-zoom">
-              <span onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-red w3-display-topright">X</span>
-        			<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-container w3-table-all w3-responsive">
-					    	<h:column><f:facet name="header">Username</f:facet>#{pt.username}</h:column>
-								<h:column><f:facet name="header">Email</f:facet>#{pt.email}</h:column>
-						  	<h:column><f:facet name="header">First Name</f:facet>#{pt.firstName}</h:column>
-								<h:column><f:facet name="header">MI</f:facet>#{pt.middleInitial}</h:column>
-								<h:column><f:facet name="header">Last Name</f:facet>#{pt.lastName}</h:column>
-							</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-container w3-table-all w3-responsive">
-								<h:column><f:facet name="header">Sex</f:facet>#{pt.sex}</h:column>
-								<h:column><f:facet name="header">Phone</f:facet>#{pt.phone}</h:column>
-								<h:column><f:facet name="header">Address</f:facet>#{pt.address}</h:column>
-							</h:dataTable>
-							<h:form id="user-profile-form" class="w3-container">
-								<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all w3-responsive">
-									<h:column><f:facet name="header"><label class="w3-blue">First Name</label></f:facet>
-										<h:inputText value="#{beanProvider.firstName}" required="true" class="w3-input w3-border" /></h:column>
-									<h:column><f:facet name="header"><label class="w3-blue">MI</label></f:facet>
-										<h:inputText value="#{beanProvider.middleInitial}" required="true" class="w3-input w3-border" /></h:column>
-									<h:column><f:facet name="header"><label class="w3-blue">Last Name</label></f:facet>
-										<h:inputText value="#{beanProvider.lastName}" required="true" class="w3-input w3-border" /></h:column>
-									<h:column><f:facet name="header"><label class="w3-blue">Sex</label></f:facet>
-										<h:selectOneMenu value="#{beanProvider.sex}" required="true" class="w3-input w3-border">
-											<f:selectItem itemValue="M" itemLabel="Male" />
-											<f:selectItem itemValue="F" itemLabel="Female" />
-											<f:selectItem itemValue="N" itemLabel="Non-Binary" />
-											<f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" />
-										</h:selectOneMenu></h:column>
-								</h:dataTable><h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="pt" class="w3-table-all w3-responsive">
-									<h:column><f:facet name="header"><label class="w3-blue">Phone</label></f:facet>
-										<h:inputText value="#{beanProvider.phone}" required="false" class="w3-input w3-border" /></h:column>
-									<h:column><f:facet name="header"><label class="w3-blue">Address</label></f:facet>
-										<h:inputText value="#{beanProvider.address}" required="false" class="w3-input w3-border" /></h:column>
-									<h:column><f:facet name="header"><label class="w3-blue">Username</label></f:facet>
-										<h:inputText value="#{beanProvider.username}" required="true" class="w3-input w3-border" /></h:column>
-									<h:column><f:facet name="header"><label class="w3-blue">Email</label></f:facet>
-										<h:inputText value="#{beanProvider.email}" required="true" class="w3-input w3-border" /></h:column>
-									<h:column><f:facet name="header"><label class="w3-blue">Password</label></f:facet>
-										<h:inputSecret value="#{beanProvider.password}" required="true" class="w3-input w3-border" />
-										<h:inputSecret value="#{beanProvider.password2}" required="true" class="w3-input w3-border" /></h:column>
-									<h:column><h:commandButton value="UPDATE" action="#{beanProvider.updateProfile()}" class="w3-button w3-teal w3-round-xxlarge" />
-  	      					<button type="reset" class="w3-button w3-teal w3-round-xxlarge">RESET</button></h:column>
-								</h:dataTable>
-							</h:form>
-							<button onclick="document.getElementById('modalProviderProfile').style.display='none'" class="w3-button w3-green w3-round-xxlarge">CLOSE</button>
-           	</div>
-					</div>
+					<h2>#{beanProvider.username}</h2>
         </div>
         <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h1>myRX</h1></a><h2>Prescribed Medications</h2></div>
         <div class="w3-container w3-center w3-col s4 m4 l4">
@@ -82,34 +32,33 @@
 
     </div>
     <div id="profileInfo" class="w3-container w3-mobile w3-car">
-			<h:dataTable value="#{beanProvider}" var="p" class="w3-table w3-responsive">
+			<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="p" class="w3-table w3-responsive">
 				<h:column>
-					<f:facet name="header">First</f:facet>
-					#{beanProvider.firstName}
+					<f:facet name="header">First</f:facet>#{p.firstName}
 				</h:column>
 				<h:column>
-					<f:facet name="header">MI</f:facet>#{beanProvider.middleInitial}
+					<f:facet name="header">MI</f:facet>#{p.middleInitial}
 				</h:column>
 				<h:column>
-					<f:facet name="header">Last</f:facet>#{beanProvider.lastName}
+					<f:facet name="header">Last</f:facet>#{p.lastName}
 				</h:column>
 				<h:column>
-					<f:facet name="header">Sex</f:facet>#{beanProvider.sex}
+					<f:facet name="header">Sex</f:facet>#{p.sex}
 				</h:column>
 				<h:column>
-					<f:facet name="header">Phone</f:facet>#{beanProvider.phone}
+					<f:facet name="header">Phone</f:facet>#{p.phone}
 				</h:column>
 				<h:column>
-					<f:facet name="header">Address</f:facet>#{beanProvider.address}
+					<f:facet name="header">Address</f:facet>#{p.address}
 				</h:column>
 				<h:column>
-					<f:facet name="header">Email</f:facet>#{beanProvider.email}
+					<f:facet name="header">Email</f:facet>#{p.email}
 				</h:column>
 				<h:column>
-					<f:facet name="header">Username</f:facet>#{beanProvider.username}
+					<f:facet name="header">Username</f:facet>#{p.username}
 				</h:column>
 				<h:column>
-					<f:facet name="header">Token</f:facet>#{beanProvider.token}
+					<f:facet name="header">Token</f:facet>#{p.token}
 				</h:column>
 				<h:column>
 					<f:facet name="header">Update</f:facet>
@@ -117,8 +66,38 @@
 					<div id="modalUpdateProfile" class="w3-modal"><div class="w3-modal-content w3-container w3-card w3-animate-zoom">
 						<span onclick="document.getElementById('modalUpdateProfile').style.display='none'" class="w3-button w3-red w3-display-topright">X</span>
 						<h3>Update Profile</h3>
-						<h:commandButton value="SUBMIT" action="#" class="w3-button w3-red w3-round-xlarge"></h:commandButton>
-						<button onclick="document.getElementById('modalUpdateProfile').style.display='none'" class="w3-button w3-red w3-round-xxlarge">CLOSE</button>
+						<h:form id="user-profile-form" class="w3-container">
+							<h:dataTable value="#{beanDButil}" class="w3-table-all w3-responsive">
+								<h:column><f:facet name="header"><label class="w3-blue">First Name</label></f:facet>
+									<h:inputText value="#{beanDButil.firstName}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-blue">MI</label></f:facet>
+									<h:inputText value="#{beanDButil.middleInitial}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-blue">Last Name</label></f:facet>
+									<h:inputText value="#{beanDButil.lastName}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-blue">Sex</label></f:facet>
+									<h:selectOneMenu value="#{beanDButil.sex}" required="true" class="w3-input w3-border">
+										<f:selectItem itemValue="M" itemLabel="Male" />
+										<f:selectItem itemValue="F" itemLabel="Female" />
+										<f:selectItem itemValue="N" itemLabel="Non-Binary" />
+										<f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" />
+									</h:selectOneMenu></h:column>
+							</h:dataTable><h:dataTable value="#{beanDButil}" class="w3-table-all w3-responsive">
+								<h:column><f:facet name="header"><label class="w3-blue">Phone</label></f:facet>
+									<h:inputText value="#{beanDButil.phone}" required="false" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-blue">Address</label></f:facet>
+									<h:inputText value="#{beanDButil.address}" required="false" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-blue">Username</label></f:facet>
+									<h:inputText value="#{beanDButil.username}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-blue">Email</label></f:facet>
+									<h:inputText value="#{beanDButil.email}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><f:facet name="header"><label class="w3-blue">Password</label></f:facet>
+									<h:inputSecret value="#{beanDButil.password}" required="true" class="w3-input w3-border" />
+									<h:inputSecret value="#{beanDButil.password2}" required="true" class="w3-input w3-border" /></h:column>
+								<h:column><h:commandButton value="UPDATE" action="#{beanDButil.updateProvider()}" class="w3-button w3-teal w3-round-xxlarge" />
+  	      				<button type="reset" class="w3-button w3-teal w3-round-xxlarge">RESET</button>
+									<button onclick="document.getElementById('modalUpdateProfile').style.display='none'" class="w3-button w3-red w3-round-xxlarge">CLOSE</button></h:column>
+							</h:dataTable>
+						</h:form>
 					</div></div>
 				</h:column>
 			</h:dataTable>
