--- a/source/0.4/src/main/webapp/provider-meds.xhtml
+++ b/source/0.4/src/main/webapp/provider-meds.xhtml
@@ -31,7 +31,7 @@
       </div>
 
     </div>
-    <div id="profileInfo" class="w3-container w3-center w3-mobile w3-card w3-light-blue">
+    <div id="profileInfo" class="w3-container w3-center w3-mobile w3-card w3-blue">
 			<h:dataTable value="#{beanDButil.getProvider(beanProvider.username)}" var="p" class="w3-table w3-responsive">
 				<h:column>
 					<f:facet name="header">First</f:facet>#{p.firstName}
