--- a/source/0.4/src/main/webapp/index.xhtml
+++ b/source/0.4/src/main/webapp/index.xhtml
@@ -18,7 +18,7 @@
     <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third"></div>
     <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
       <a href="index.xhtml">
-        <h:graphicImage url="myRx.PNG"/>
+        <h:graphicImage url="myRx.png"/>
       </a>
       <h2>Online Medication List</h2>
     </div>
