--- a/source/0.4f/src/main/webapp/main.xhtml
+++ b/source/0.4f/src/main/webapp/main.xhtml
@@ -8,7 +8,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <h:outputStylesheet library="css" name="w3.css" />
-  <title>INDEX</title>
+  <title>myRx Patient Medications</title>
 </h:head>
 <h:body>
 
@@ -21,7 +21,7 @@
     <div class="w3-container w3-center w3-col s4 m4 l4">
       <h2>#{beanPatient.username}</h2>
     </div>
-    <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h1>myRX</h1></a></div>
+    <div class="w3-container w3-center w3-col s4 m4 l4"><a href="index.xhtml"><h:graphicImage url="myRx.png"/></a></div>
     <div class="w3-container w3-center w3-col s4 m4 l4">
       <h:form>
         <h:commandButton action="#{beanPatient.logout}" value="LOGOUT" class="w3-button w3-green w3-round-xxlarge"></h:commandButton>
