--- a/source/0.4f/src/main/webapp/register-provider.xhtml
+++ b/source/0.4f/src/main/webapp/register-provider.xhtml
@@ -1,109 +1,58 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:h="http://xmlns.jcp.org/jsf/html">
-<head>
+<h:head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="resources/css/w3.css"/>
-  <link rel="stylesheet" href="resources/css/font-awesome.min.css" />
+  <h:outputStylesheet library="css" name="w3.css" />
   <title>myRx Provider Registration</title>
-</head>
-<body>
+</h:head>
+<h:body>
 
-<div class="w3-container">
+<ui:composition template="templates/template-main.xhtml">
 
-  <div id="header" class="header w3-container w3-row w3-cell-row w3-bar w3-teal w3-card">
-    <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
-    </div>
-    <div class="w3-conatiner w3-cell w3-mobile w3-content w3-margin w3-third">
-      <a href="index.xhtml"><h1>myRX</h1></a>
-      <h2>Provider Registration Form</h2>
-    </div>
-    <div class="w3-container w3-cell w3-mobile w3-content w3-margin w3-third">
-    </div>
+<ui:define name="content">
+
+<div class="w3-cell-row w3-section">
+  <div class="w3-container w3-cell w3-cell-middle w3-mobile">
+    <h:form id="providerRegistrationForm" class="w3-container">
+      <label class="w3-text-blue">Email Address</label>
+      <h:inputText id="userEmail" value="#{beanDButil.email}" required="true" class="w3-input w3-border" />
+      <label class="w3-text-blue">Username</label>
+      <h:inputText id="userUsername" value="#{beanDButil.username}" required="true" class="w3-input w3-border" />
+      <label class="w3-text-blue">Password</label>
+      <h:inputSecret id="userPassword" value="#{beanDButil.password}" required="true" class="w3-input w3-border" />
+      <label class="w3-text-blue">Password Confirmation</label>
+      <h:inputSecret id="userPassword2" value="#{beanDButil.password}" required="true" class="w3-input w3-border" />
+      <label class="w3-text-blue">First Name:</label>
+      <h:inputText id="userFirstName" value="#{beanDButil.firstName}" required="true" class="w3-input w3-border" />
+      <label class="w3-text-blue">Middle Initial</label>
+      <h:inputText id="userMiddleInitial" value="#{beanDButil.middleInitial}" required="false" class="w3-input w3-border" />
+      <label class="w3-text-blue">Last Name</label>
+      <h:inputText id="userLastName" value="#{beanDButil.lastName}" required="true" class="w3-input w3-border" />
+      <label class="w3-text-blue">Sex</label>
+      <h:selectOneMenu name="sex" value="#{beanDButil.sex}" required="true" class="w3-select">
+        <f:selectItem itemValue="M" itemLabel="Male" />
+        <f:selectItem itemValue="F" itemLabel="Female" />
+        <f:selectItem itemValue="N" itemLabel="Nonbinary" />
+        <f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" />
+      </h:selectOneMenu>
+      <label class="w3-text-blue">Physical Address</label>
+      <h:inputTextarea id="userAddress" value="#{beanDButil.address}" required="false" class="w3-input w3-border" />
+      <label class="w3-text-blue">Phone Number</label>
+      <h:inputText id="userPhone" value="#{beanDButil.phone}" required="false" class="w3-input w3-border" />
+      <h:commandButton value="REGISTER" action="#{beanDButil.addProvider()}" class="w3-button w3-teal"></h:commandButton> 
+      <button type="reset" class="w3-button w3-teal">RESET</button>
+    </h:form>
   </div>
+</div>
 
-  <div class="w3-cell-row w3-section">
+</ui:define>
 
-    <div class="w3-container w3-cell w3-cell-middle w3-mobile">
-      <h:form id="patientRegistrationForm" class="w3-container">
-        <label class="w3-text-blue">Email Address</label>
-        <h:inputText id="userEmail"
-                     value="#{beanDButil.email}"
-                     required="true"
-                     class="w3-input w3-border" />
-        <label class="w3-text-blue">Username</label>
-        <h:inputText id="userUsername"
-                     value="#{beanDButil.username}"
-                     required="true"
-                     class="w3-input w3-border" />
-        <label class="w3-text-blue">Password</label>
-        <h:inputSecret id="userPassword"
-                       value="#{beanDButil.password}"
-                       required="true"
-                       class="w3-input w3-border" />
-        <label class="w3-text-blue">Password Confirmation</label>
-        <h:inputSecret id="userPassword2"
-                       value="#{beanDButil.password}"
-                       required="true"
-                       class="w3-input w3-border" />
-	      <label class="w3-text-blue">Token</label>
-        <h:inputSecret id="usertoken"
-                       value="#{beanDButil.token}"
-                       required="true"
-                       class="w3-input w3-border" />
-        <label class="w3-text-blue">First Name:</label>
-        <h:inputText id="userFirstName"
-                     value="#{beanDButil.firstName}"
-                     required="true"
-                     class="w3-input w3-border" />
-        <label class="w3-text-blue">Middle Initial</label>
-        <h:inputText id="userMiddleInitial"
-                     value="#{beanDButil.middleInitial}"
-                     required="false"
-                     class="w3-input w3-border" />
-        <label class="w3-text-blue">Last Name</label>
-        <h:inputText id="userLastName"
-                     value="#{beanDButil.lastName}"
-                     required="true"
-                     class="w3-input w3-border" />
-        <label class="w3-text-blue">Sex</label>
-        <h:selectOneMenu name="sex"
-		value="#{beanDButil.sex}"
-                required="true"
-                class="w3-select">
-          <f:selectItem itemValue="M" itemLabel="Male" />
-          <f:selectItem itemValue="F" itemLabel="Female" />
-          <f:selectItem itemValue="N" itemLabel="Nonbinary" />
-          <f:selectItem itemValue="X" itemLabel="Do Not Wish To Disclose" />
-        </h:selectOneMenu>
-        <label class="w3-text-blue">Physical Address</label>
-        <h:inputTextarea id="userAddress"
-                     value="#{beanDButil.address}"
-                     required="false"
-                     class="w3-input w3-border" />
-        <label class="w3-text-blue">Phone Number</label>
-        <h:inputText id="userPhone"
-                     value="#{beanDButil.phone}"
-                     required="false"
-                     class="w3-input w3-border" />
-        <h:commandButton value="REGISTER"
-                         action="#{beanDButil.addProvider()}"
-                         class="w3-button w3-teal"></h:commandButton>
-        <button type="reset" class="w3-button w3-teal">RESET</button>
-      </h:form>
-    </div>
+</ui:composition>
 
-  </div>
-
-  <div id="footer" class="footer w3-container w3-bar w3-teal w3-card">
-    <a href="index.xhtml"><h2>myRX</h2></a>
-  </div>
-	
-</div>  
-
-</body>
+</h:body>
 </html>
